[workspace]
members = [
    "render",
]

[package]
name = "win-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.7"
pathfinder_geometry = { git = "https://github.com/servo/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder/" }
pathfinder_color = { git = "https://github.com/servo/pathfinder/" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder/" }
pathfinder_gl = { git = "https://github.com/servo/pathfinder/" }
pathfinder_canvas = { git = "https://github.com/servo/pathfinder/" }
pdf = { git = "https://github.com/pdf-rs/pdf/"}
pdf_render = { path = "render" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
surfman = "*"
gl = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.84"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.34"